--- a/apps/seller/package.json
+++ b/apps/seller/package.json
@@ -9,19 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rambow/ui": "workspace:*",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@rambow/ui": "workspace:*"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
-    "eslint-config-rambow": "workspace:*",
-    "eslint": "7.32.0",
-    "tsconfig": "workspace:*",
     "@types/node": "17.0.12",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
+    "autoprefixer": "10.4.13",
+    "eslint": "7.32.0",
+    "eslint-config-rambow": "workspace:*",
+    "postcss": "8.4.19",
+    "tailwindcss": "3.2.4",
+    "tsconfig": "workspace:*",
     "typescript": "4.5.3"
   }
 }
