--- a/packages/rambow-ui/package.json
+++ b/packages/rambow-ui/package.json
@@ -1,19 +1,49 @@
 {
   "name": "@rambow/ui",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint *.ts*"
+    "dev": "pnpm build:swc -w",
+    "build": "pnpm clean && pnpm build:swc && pnpm types",
+    "build:swc": "swc src -d dist --copy-files",
+    "types": "tsc --emitDeclarationOnly",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "clean": "rm -rf ./dist"
+  },
+  "sideEffects": false,
+  "type": "module",
+  "exports": {
+    ".": "./dist/index.js",
+    "./*": [
+      "./dist/*.js",
+      "./dist/*/index.js"
+    ],
+    "./tailwind": {
+      "require": "./dist/tailwind.cjs"
+    },
+    "./globals.css": "./dist/styles/globals.css"
+  },
+  "files": [
+    "dist"
+  ],
+  "dependencies": {
+    "@swc/helpers": "0.4.14",
+    "clsx": "1.2.1"
   },
   "devDependencies": {
+    "@swc/cli": "0.1.57",
+    "@swc/core": "1.3.21",
     "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
     "eslint": "7.32.0",
     "eslint-config-rambow": "workspace:*",
-    "react": "18.2.0",
     "tsconfig": "workspace:*",
     "typescript": "4.5.2"
+  },
+  "peerDependencies": {
+    "next": "*",
+    "react": "^17.0.0 || ^18.0.0-0",
+    "react-dom": "^17.0.0 || ^18.0.0-0"
   }
 }
