--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -24,6 +24,7 @@
     "eslint-config-rambow": "workspace:*",
     "postcss": "8.4.19",
     "tailwindcss": "3.2.4",
+    "@svgr/webpack": "6.5.1",
     "tsconfig": "workspace:*",
     "typescript": "4.5.3"
   }
